<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="@color/lightSurfaceContainerHigh"
        android:fontFamily="sans-serif-medium"
        app:icon="@drawable/ic_back_foreground"
        app:iconSize="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/admin_profile_picture_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center" >

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:id="@+id/admin_profile_image_placeholder"
            android:src="@drawable/ic_person_foreground"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:background="@drawable/name_bg"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="48sp"
            android:text="" />
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/admin_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@+id/admin_profile_picture_layout"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/admin_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:textColor="@color/lightOnSurfaceVariant"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/admin_user_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/admin_user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:textColor="@color/lightOnSurfaceVariant"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/admin_user_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/admin_user_roles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="2dp"
        android:textColor="@color/lightOnSurfaceVariant"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/admin_user_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

<!--        Width of 0dp was added to ensure buttons wouldn't overflow off screen-->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/admin_delete_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/lightSurfaceContainerHigh"
            android:fontFamily="sans-serif-medium"
            android:text="Remove\nImage"
            app:icon="@drawable/ic_trash_foreground"
            app:iconSize="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/admin_delete_user"
            android:maxLines="2"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/admin_delete_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:backgroundTint="@color/lightSurfaceContainerHigh"
            android:fontFamily="sans-serif-medium"
            android:text="Remove\nProfile"
            app:icon="@drawable/ic_trash_foreground"
            app:iconSize="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/admin_delete_user_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>