<?xml version="1.0" encoding="utf-8"?>
<!--Code used from the following source for menu bar-->
<!--https://www.geeksforgeeks.org/bottom-navigation-bar-in-android/-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/browseProfiles"
        android:title="Profiles"
        android:icon="@drawable/ic_people_foreground"/>
    <item
        android:id="@+id/browseFacilities"
        android:title="Facilities"
        android:icon="@drawable/facility_icon"/>
...
