<?xml version="1.0" encoding="utf-8"?>
<!--Code used from the following source for menu bar-->
<!--https://www.geeksforgeeks.org/bottom-navigation-bar-in-android/-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomNavigationView">

    <item
        android:id="@+id/home"
        android:title="Home"
        android:icon="@drawable/ic_home_foreground"/>
<!--    <item-->
...
